# quadtree

./: .gitignore  Cargo.toml  NOTES.md  README.md
development/: README.md
development/hooks/: pre-commit
src/: area.rs  entry.rs  geometry.rs  handle_iter.rs  iter.rs  lib.rs  map.rs  point.rs  qtinner.rs  qtree.rs  quadtree.rs  traversal.rs  types.rs  uuid_iter.rs
src/geometry/: area.rs  mod.rs  point.rs  quadrant.rs
tests/: area_tests.rs  integration_test.rs  iterator_tests.rs  point_tests.rs  query_tests.rs  util.rs
